Add support for -mcpu=hs4x,hs4xd
Fixes P10019563-40739 "[ GNU 2020.03 - IDE ] HS4x template support from IDE".

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -50,6 +50,8 @@ option.target.cpuhs.hs = -mcpu=hs
 option.target.cpuhs.hs34 = -mcpu=hs34
 option.target.cpuhs.hs38 = -mcpu=hs38
 option.target.cpuhs.hs38_linux = -mcpu=hs38_linux
+option.target.cpuhs.hs4x = -mcpu=hs4x
+option.target.cpuhs.hs4xd = -mcpu=hs4xd
 option.target.cpu700.arc700 = -mcpu=arc700
 option.target.cpu600.arc600 = -mcpu=arc600
 # -mfpu=
