Add ARC64 support in ARC GNU IDE

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -8,7 +8,7 @@ plugin.name = GNU Toolchain for ARC Build Support
 # Build properties
 #
 extension.properties = Build Properties
-buildArtifactType.application = ARC Cross ELF32 Target Application
+buildArtifactType.application = ARC Baremetal Application
 buildArtifactType.staticLib = ARC Cross ELF32 Target Static Library
 buildArtifactType.axs101 = ARC AXS101 Projects
 buildArtifactType.axs103 = ARC AXS103 Projects
@@ -19,6 +19,7 @@ buildArtifactType.emsdp = ARC EM SDP Projects
 property.cpu = ARC CPU family
 property.cpu.em = ARC EM CPU
 property.cpu.hs = ARC HS CPU
+property.cpu.hs6x = ARC HS6x CPU
 property.cpu.arc700 = ARC700 CPU
 property.cpu.arc600 = ARC600 CPU
 
@@ -110,6 +111,11 @@ option.target.ea = Extended Arithmetic Instructions (-mea)
 option.target.xy = DSP XY memory (-mxy)
 option.target.xy.tip = Passed down to the assembler to enable the XY memory extension. Also sets the preprocessor symbol __Xxy.
 option.target.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
+option.target.m128 = 128 bit load/store (-m128)
+option.target.mcmodel = Use a specific memory model (-mcmodel)
+option.target.mcmodel.small = Small (-mcmodel=small)
+option.target.mcmodel.medium = Medium (-mcmodel=medium)
+option.target.mcmodel.large = Large (-mcmodel=large)
 
 # Additional tools
 option.extratools = Additional Tools
@@ -122,6 +128,7 @@ toolchain.em = GNU Toolchain for ARC EM
 toolchain.emeb = GNU Toolchain for ARC EM (big-endian)
 toolchain.hs = GNU Toolchain for ARC HS
 toolchain.hseb = GNU Toolchain for ARC HS (big-endian)
+toolchain.hs6x = GNU Toolchain for ARC HS6x
 toolchain.arc700 = GNU Toolchain for ARC700
 toolchain.arc700eb = GNU Toolchain for ARC700 (big-endian)
 toolchain.arc600 = GNU Toolchain for ARC600
@@ -182,6 +189,9 @@ assembler.option.flags = Assembler flags
 category.general = General
 linker.option.nano = Enable nano.specs to use standard libraries optimized for code size
 linker.option.specs = Use GCC specs file
+linker.option.specshs6x = Board type
+linker.option.specshs6x.qemu = QEMU
+linker.option.specshs6x.hl = nSIM/MDB
 linker.option.specs.nsim = nsim
 linker.option.specsem.emsk_em9d = emsk_em9d
 linker.option.specsem.emsk_em11d = emsk_em11d
