Add new GNU LD spec: "--specs=emsdp.specs"
todo: set as default

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -195,6 +195,7 @@ linker.option.specshs6x.hl = nSIM/MDB
 linker.option.specs.nsim = nsim
 linker.option.specsem.emsk_em9d = emsk_em9d
 linker.option.specsem.emsk_em11d = emsk_em11d
+linker.option.specsem.emsdp = emsdp
 linker.option.specs.nosys = nosys
 linker.option.specs.none = None
 linker.option.scriptfile = Script file (-T)
