--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <eclipse.mirror>http://ftp-stud.fht-esslingen.de/pub/Mirrors/eclipse</eclipse.mirror>
     <eclipse.version>2022-03</eclipse.version>
     <!-- Path to CDT p2 repository -->
+    <cdt.mirror>https://archive.eclipse.org</cdt.mirror>
     <cdt.version>10.6</cdt.version>
     <tycho-version>1.3.0</tycho-version>
   </properties>
@@ -24,7 +25,7 @@
   <repositories>
     <repository>
       <id>cdt</id>
-      <url>${eclipse.mirror}/tools/cdt/releases/${cdt.version}/</url>
+      <url>${cdt.mirror}/tools/cdt/releases/${cdt.version}/</url>
       <layout>p2</layout>
     </repository>
     <repository>
