Update all specs properties and all projects
Newlib 2023.09 introduces a completely new set of specs files:
HSDK, EM SDP (ICCM/DCCM and RAM-based), EMSK (ICCM/DCCM and
RAM-based), IoTDK.

Here is a list of updates:

* By default, each project uses a corresponding specs file for
  the particular board. TCF file is used only for options and
  board's headers.
* A project for each board is shipped with TCF file.
* All C++ projects use RAM-based specs file to make it
  possible to fit runtime in memory. It was impossible to
  build even simple C++ applications earlier.

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -193,11 +193,24 @@ linker.option.specshs6x = Board type
 linker.option.specshs6x.qemu = QEMU
 linker.option.specshs6x.hl = nSIM/MDB
 linker.option.specs.nsim = nsim
-linker.option.specsem.emsk_em9d = emsk_em9d
-linker.option.specsem.emsk_em11d = emsk_em11d
-linker.option.specsem.emsdp = emsdp
 linker.option.specs.nosys = nosys
 linker.option.specs.none = None
+linker.option.specs.arcv2.nsim = nsim.specs - nSIM GNU hostlink protocol
+linker.option.specs.arcv2.hl = hl.specs - nSIM MetaWare hostlink protocol
+linker.option.specs.arcv2.nosys = nosys.specs - Stubs for all system calls
+linker.option.specs.arcv2.none = None
+linker.option.specs.arcv2.hsdk = hsdk.specs - HS Development Kit and HS Development Kit 4xD
+linker.option.specs.arcv2.emsdp12 = emsdp1.2.specs - EM Software Development Platform 1.2
+linker.option.specs.arcv2.emsdp12_ram = emsdp1.2_ram.specs - EM Software Development Platform 1.2 (RAM-based)
+linker.option.specs.arcv2.emsdp11 = emsdp1.1.specs - EM Software Development Platform 1.0 and 1.1
+linker.option.specs.arcv2.emsdp11_ram = emsdp1.1_ram.specs - EM Software Development Platform 1.0 and 1.1 (RAM-based)
+linker.option.specs.arcv2.iotdk = iotdk.specs - IoT Development Kit
+linker.option.specs.arcv2.emsk22_em11d = emsk2.2_em11d.specs - EM Starter Kit 2.2 and 2.3 with EM11D
+linker.option.specs.arcv2.emsk22_em11d_ram = emsk2.2_em11d_ram.specs - EM Starter Kit 2.2 and 2.3 with EM11D (RAM-based)
+linker.option.specs.arcv2.emsk22_em9d = emsk2.2_em9d.specs - EM Starter Kit 2.2 and 2.3 with EM9D
+linker.option.specs.arcv2.emsk22_em9d_ram = emsk2.2_em9d_ram.specs - EM Starter Kit 2.2 and 2.3 with EM9D (RAM-based)
+linker.option.specs.arcv2.emsk22_em7d = emsk2.2_em7d.specs - EM Starter Kit 2.2 and 2.3 with EM7D
+linker.option.specs.arcv2.emsk22_em7d_ram = emsk2.2_em7d_ram.specs - EM Starter Kit 2.2 and 2.3 with EM7D (RAM-based)
 linker.option.scriptfile = Script file (-T)
 linker.option.memoryx = Directory with memory.x file
 linker.category.libs = Libraries
