--- a/gnu.elf/templates/hsdk_empty_c/template.properties
+++ b/gnu.elf/templates/hsdk_empty_c/template.properties
@@ -1,2 +1,2 @@
 template.label=ARC HS Development Kit Empty Project
-template.description=A skeletal Managed C project for ARC HS Development Kit. Contains a TCF file.
+template.description=A skeletal C Hello World project for ARC HS Development Kit. Contains a TCF file.
